// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFnBlockedContent() retrieves metadata from a particular set of convey functions 1`] = `
Object {
  "Convey": Array [
    Object {
      "Convey": Array [
        Object {
          "Convey": Array [],
          "code": "// some
// test
// code
// block",
          "end": 6,
          "start": 1,
          "title": "Test A-1",
        },
        Object {
          "Convey": Array [],
          "code": "// some
// test
// code
// block",
          "end": 12,
          "start": 7,
          "title": "Test A-2",
        },
      ],
      "code": "Convey(\\"Test A-1\\", func() {
	// some
	// test
	// code
	// block
})
Convey(\\"Test A-2\\", func() {
	// some
	// test
	// code
	// block
})",
      "end": 14,
      "start": 1,
      "title": "Test A",
    },
    Object {
      "Convey": Array [
        Object {
          "Convey": Array [],
          "code": "// some
// test
// code
// block",
          "end": 6,
          "start": 1,
          "title": "Test B-1",
        },
        Object {
          "Convey": Array [],
          "code": "// some
// test
// code
// block",
          "end": 12,
          "start": 7,
          "title": "Test B-2",
        },
      ],
      "code": "Convey(\\"Test B-1\\", func() {
	// some
	// test
	// code
	// block
})
Convey(\\"Test B-2\\", func() {
	// some
	// test
	// code
	// block
})",
      "end": 29,
      "start": 16,
      "title": "Test B",
    },
  ],
}
`;

exports[`parse() retrieves metadata from a go test file 1`] = `
Array [
  Object {
    "Convey": Array [
      Object {
        "Convey": Array [
          Object {
            "Convey": Array [],
            "code": "// some
// test
// code
// block",
            "end": 6,
            "start": 1,
            "title": "Test A-1",
          },
          Object {
            "Convey": Array [],
            "code": "// some
// test
// code
// block",
            "end": 12,
            "start": 7,
            "title": "Test A-2",
          },
        ],
        "code": "Convey(\\"Test A-1\\", func() {
	// some
	// test
	// code
	// block
})
Convey(\\"Test A-2\\", func() {
	// some
	// test
	// code
	// block
})",
        "end": 16,
        "start": 3,
        "title": "Test A",
      },
      Object {
        "Convey": Array [
          Object {
            "Convey": Array [],
            "code": "// some
// test
// code
// block",
            "end": 6,
            "start": 1,
            "title": "Test B-1",
          },
          Object {
            "Convey": Array [],
            "code": "// some
// test
// code
// block",
            "end": 12,
            "start": 7,
            "title": "Test B-2",
          },
        ],
        "code": "Convey(\\"Test B-1\\", func() {
	// some
	// test
	// code
	// block
})
Convey(\\"Test B-2\\", func() {
	// some
	// test
	// code
	// block
})",
        "end": 31,
        "start": 18,
        "title": "Test B",
      },
    ],
    "code": "// some setup

Convey(\\"Test A\\", t, func() {
	Convey(\\"Test A-1\\", func() {
		// some
		// test
		// code
		// block
	})
	Convey(\\"Test A-2\\", func() {
		// some
		// test
		// code
		// block
	})
})

Convey(\\"Test B\\", t, func() {
	Convey(\\"Test B-1\\", func() {
		// some
		// test
		// code
		// block
	})
	Convey(\\"Test B-2\\", func() {
		// some
		// test
		// code
		// block
	})
})",
    "end": 44,
    "start": 12,
    "title": "Some",
  },
]
`;
